# genetic-algorithm-linear-regression-aws

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto_deploy.yml
src/: app.py  deploy_script.sh  shutdown_script.sh  training_script.sh
src/config/: params.yml
src/model/: genetic_linear_regression.py  infer.py  train.py
src/utils/: fetch_dataset_s3.py  fetch_model_s3.py  upload_dataset_s3.py  upload_s3.py
src/weights/: README.md
